--- a/index.html
+++ b/index.html
@@ -30,12 +30,27 @@
 </div>
 <p>&nbsp;</p>
 <script>loginForm()</script>
-<div class="wrapper col-xs-12">
+<div class="form-horizontal col-xs-9 col-xs-offset-3">
 <form id="nodeid">
-	<div class="col-xs-3 col-xs-offset-3">
-		<label for="nodeid">ID:</label><input type="text" name="nodeID" id="nodeID" value=""></input>
+	<div class="form-group">
+		<label class="control-label col-xs-2">ID:</label>
+		<div class="col-xs-3">
+			<input class="form-control" type="text" id="nodeID" value=""></input>
+		</div>
 	</div>
-	<div class="col-xs-3">
+	<div class="form-group">
+		<label class="control-label col-xs-2">Start Date:</label>
+		<div class="col-xs-3">
+			<input class="form-control" type="text" id="bdate" value=""></input>
+		</div>
+	</div>
+	<div class="form-group">
+		<label class="control-label col-xs-2">End Date:</label>
+		<div class="col-xs-3">
+			<input class="form-control" type="text" id="edate" value=""></input>
+		</div>
+	</div>
+	<div class="col-xs-6 col-xs-offset-2">
 		<div class='btn btn-info' id='report'>Get Report</div>
 	</div>
 </form>
