--- a/index.html
+++ b/index.html
@@ -21,11 +21,17 @@
 	<div class="col-xs-2">
 		<div class='btn btn-primary' onClick='getAccount()'>Get Account</div>
 	</div>
-	<div class="col-xs-3">
-		<div class='btn btn-info' onClick='showNodeForm(1)'>Get Report By Channel</div>
+	<div class="col-xs-2">
+		<div class='btn btn-info' onClick='showNodeForm(0)'>Get Report By Channel</div>
 	</div>
-	<div class="col-xs-3">
-		<div class='btn btn-info' onClick='showNodeForm(0)'>Get Report By Node</div>
+	<div class="col-xs-2">
+		<div class='btn btn-info' onClick='showNodeForm(1)'>Get Report By Node</div>
+	</div>
+	<div class="col-xs-2">
+		<div class='btn btn-info' onClick='showNodeForm(2)'>Get CS Report By Channel</div>
+	</div>
+	<div class="col-xs-2">
+		<div class='btn btn-info' onClick='showNodeForm(3)'>Get CS Report By Node</div>
 	</div>
 </div>
 <p>&nbsp;</p>
