--- a/index.html
+++ b/index.html
@@ -21,17 +21,29 @@
 	<div class="col-xs-2">
 		<div class='btn btn-primary' onClick='getAccount()'>Get Account</div>
 	</div>
-	<div class="col-xs-2">
-		<div class='btn btn-info' onClick='showNodeForm(0)'>Get Report By Channel</div>
+	<div class="col-xs-3">
+		<div class='btn btn-danger' onClick='showNodeForm(0)'>Get Sess Report By Channel</div>
+	</div>
+	<div class="col-xs-3">
+		<div class='btn btn-danger' onClick='showNodeForm(1)'>Get Sess Report By Node</div>
 	</div>
 	<div class="col-xs-2">
-		<div class='btn btn-info' onClick='showNodeForm(1)'>Get Report By Node</div>
+		<div class='btn btn-warning' onClick='showNodeForm(2)'>Get CS Report By Channel</div>
 	</div>
 	<div class="col-xs-2">
-		<div class='btn btn-info' onClick='showNodeForm(2)'>Get CS Report By Channel</div>
+		<div class='btn btn-warning' onClick='showNodeForm(3)'>Get CS Report By Node</div>
 	</div>
 	<div class="col-xs-2">
-		<div class='btn btn-info' onClick='showNodeForm(3)'>Get CS Report By Node</div>
+		<div class='btn btn-info' onClick='showNodeForm(4)'>Get TS Report By Channel</div>
+	</div>
+	<div class="col-xs-2">
+		<div class='btn btn-info' onClick='showNodeForm(5)'>Get TS Report By Node</div>
+	</div>
+	<div class="col-xs-2">
+		<div class='btn btn-success' onClick='showNodeForm(6)'>Get Perf Report By Channel</div>
+	</div>
+	<div class="col-xs-2">
+		<div class='btn btn-success' onClick='showNodeForm(7)'>Get Perf Report By Node</div>
 	</div>
 </div>
 <p>&nbsp;</p>
@@ -57,7 +69,7 @@
 		</div>
 	</div>
 	<div class="col-xs-6 col-xs-offset-2">
-		<div class='btn btn-info' id='report'>Get Report</div>
+		<div class='btn btn-danger' id='report'>Get Report</div>
 	</div>
 </form>
 </div>
