--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 	 -->
 
   <!-- Tabulator from CDN -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/tabulator/2.11.0/tabulator.min.css" rel="stylesheet">
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/tabulator/2.11.0/tabulator.min.js"></script>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/tabulator/2.12.0/tabulator.min.css" rel="stylesheet">
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/tabulator/2.12.0/tabulator.min.js"></script>
 
   <!-- Moment dates formatting -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.0/moment.min.js"></script>
@@ -61,14 +61,37 @@
       padding: 1em;
       border-style: outset;
     }
+		
+		#report{
+			display:none;
+		}
+		
+		#reportswitch{
+		 display:initial;		 
+		}
+		
+		#reportswitch input{
+		cursor:pointer;		
+		}
+		
+		#reportswitch label{
+			cursor:pointer;		
+		}
+		
+	  #reportswitch input[type="radio"]:checked + label {
+			background-color: green;
+			color:yellow;		
+		}
+    .roombuttons{
+			display:none;
+		}		
 
     button {
       margin: 0.7em 0.2em;
 			min-width: 9.2em;
     }
 
-    #mainreport12,
-    #mainreport3 {
+    #mainreport12, #mainreport3, #autoreport {
       width: 100%;
       display: none;
     }
@@ -80,7 +103,6 @@
 
     input{
       height: 1.2em;
-			font-size: 0.8em;
     }
 
     input[type="text"] {
@@ -99,12 +121,13 @@
       transform: translate(-50%, -50%);
     }
 
-    #groupoption, #download12, #download3{
+    #groupoption, #download{
       display: none;
     }
 		
-		.txtinputs{
-		margin: 0.2em 0.8em;		
+		.dateinputs{
+		margin: 0.2em 0.8em;
+		display:none;	
 		}
 		
 		#signinform{
@@ -113,8 +136,7 @@
 		
 		#username, #password{
 			min-width: 12em;
-		}
-		
+		}		
 		
   </style>
 </head>
@@ -122,11 +144,25 @@
 <body>
   <div>
     <button class="ui-button ui-widget ui-corner-all" id='myname' onClick='showLoginForm()'>Log Me In</button>
-    <button class="ui-button ui-widget ui-corner-all" onClick='getHierarchy()'>Get Environment</button>
+<!--     <button class="ui-button ui-widget ui-corner-all" onClick='getHierarchy()'>Get Environment</button>
 		<label>ID:</label>
-		<!-- ID is read-only now -->
-    <input type="text" id="nodeID" value="" disabled></input> 
-  </div>
+
+    <input type="text" id="nodeID" value="" disabled></input>
+
+ -->		
+		<div id="reportswitch">
+      <input type="radio" id="S" name="reportname" value="Report12Request">
+      <label class="ui-button ui-widget ui-corner-all" for="S">Session & Customer Survey
+		</label>
+      <input type="radio" id="P" name="reportname" value="Report3Request">
+      <label class="ui-button ui-widget ui-corner-all" for="P">Performance
+		</label>
+			<input type="radio" id="A" name="reportname" value="AutoPerformance">
+      <label class="ui-button ui-widget ui-corner-all" for="A">Auto-Performance
+		</label>
+    </div>
+	
+	</div>
 
   <div id="login">
     <form id="signinform">
@@ -151,32 +187,29 @@
       <label for="N">By Node
 			</label>
     </div> -->    
-		<div>
-      <input type="radio" id="S" name="reportname" value="Report12Request" checked>
-      <label for="S">Session & Customer Survey
-		</label><br>
-      <input type="radio" id="P" name="reportname" value="Report3Request">
-      <label for="P">Performance
-		</label>
-    </div>
-    <div class="txtinputs">
+	
+    <div class="dateinputs">
       <label>Start Date:</label><br>
       <input type="text" id="bdate" value=""></input>
     </div>
-    <div class="txtinputs">
+    <div class="dateinputs">
       <label>End Date:</label><br>
       <input type="text" id="edate" value=""></input>
     </div>
-    <button class="ui-button ui-widget ui-corner-all" onclick="getReport();" id='report'>Report</button>
+    <!-- <button class="ui-button ui-widget ui-corner-all roombuttons" onclick="joinRoom();">Start</button>
+		<button class="ui-button ui-widget ui-corner-all roombuttons" onclick="leaveRoom();">Stop</button> -->
+		<button class="ui-button ui-widget ui-corner-all" onclick="getReport();" id='report'>RUN</button>		
     <button id="groupoption" class="ui-button ui-widget ui-corner-all" onclick="groupbyagent();">Group by Agent</button>
-		<button id="download12" class="ui-button ui-widget ui-corner-all" onClick='download12()'>Download</button>
-  	<button id="download3" class="ui-button ui-widget ui-corner-all" onClick='download3()'>Download</button>
+		<button id="download" class="ui-button ui-widget ui-corner-all" onClick='download()'>Download</button>  	
   </div>
 
   <div id="mainreport12">
   </div>
 
   <div id="mainreport3">
+  </div>
+	
+	<div id="autoreport">
   </div>
 
   <div id="spinner"></div>
